--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -20,7 +20,7 @@ html
   .container 
     block content 
     footer 
-      small &copy; Berat Sevim 2022
+      small &copy; Cumali Oğuz 2022
 
 
   script(src='javascripts/jquery-3.6.1.min.js')
