--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -21,7 +21,6 @@ html
     block content 
     footer 
       small &copy; Cumali Oğuz 2022
-
-
-  script(src='javascripts/jquery-3.6.1.min.js')
-  script(src='bootstrap/js/bootstrap.min.js')
+script(src='/javascripts/jquery-3.6.1.min.js')
+script(src='/bootstrap/js/bootstrap.min.js')
+script(src='/javascripts/denetle.js')
